Remove pointer-events from the block in the Gutenberg editor, so the user can't click on the links while editing the block

--- a/assets/public.css
+++ b/assets/public.css
@@ -107,3 +107,8 @@ a.olab-activity-item-button:focus {
 .widget_openlab_activity_block_widget a.olab-activity-item-button {
     color: #fff;
 }
+
+#editor .olab-activity-item a,
+#editor .olab-activity-item a:hover {
+    pointer-events: none;
+}
