--- a/block/src/editor.scss
+++ b/block/src/editor.scss
@@ -1,8 +1,10 @@
 .olab-ic-field-group {
+	margin-bottom: 2em;
+
     .components-checkbox-control {
         margin-bottom: 0;
     }
-    
+
     &-label {
         font-size: 11px;
         font-weight: 500;
