--- a/assets/public.css
+++ b/assets/public.css
@@ -1,7 +1,3 @@
-.olab-activity-stream {
-
-}
-
 .olab-activity-item-wrapper {
     position: relative;
     padding: 15px;
@@ -35,48 +31,13 @@
     padding-left: 15px;
 }
 
-.olab-activity-entry-content p,
-.olab-activity-entry-content a {
+.olab-activity-entry-content p {
     margin: 0 0 15px;
     font-size: 14px;
-    color: #333;
 }
 
-.olab-activity-entry-content a {
-    text-decoration: underline;
-}
-
-.olab-activity-entry-content a:hover,
-.olab-activity-entry-content a:focus {
-    text-decoration: none;
-}
-
-a.olab-activity-item-button {
-    display: inline-block;
-    margin-bottom: 0;
-    font-weight: normal;
-    text-align: center;
-    vertical-align: middle;
-    cursor: pointer;
-    background-image: none;
-    border: 1px solid transparent;
-    white-space: nowrap;
-    position: relative;
-    padding: 1px 5px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
-    background-color: #444444;
-    border-color: #373737;
-    color: #fff;
-    text-decoration: none;
-}
-
-a.olab-activity-item-button:hover,
-a.olab-activity-item-button:focus {
-    color: #63dfd2;
-    background-color: #2b2b2b;
-    border-color: #191919;
+.olab-activity-item-button {
+	font-size: 12px;
 }
 
 /* Simple view */
